--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,13 +1,18 @@
-name: Run Market Watcher Scraper
+name: Run Market Watcher Scraper + Deploy to GitHub Pages
 
 on:
   schedule:
-    - cron: "0 */6 * * *"  # every 6 hours
-  workflow_dispatch:        # allows manual run from Actions tab
+    - cron: "0 */6 * * *" # every 6 hours
+  workflow_dispatch:       # allows manual trigger
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write  # allow pushing changes
+      pages: write
+      id-token: write
 
     steps:
       - name: Checkout repository
@@ -27,10 +32,31 @@ jobs:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: npm run scrape
 
-      - name: Commit and push results
+      - name: Commit scraped data
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add products/hot_all.json keywords/keyword_hot.json
-          git commit -m "Auto-update scraped data [skip ci]" || echo "No changes to commit"
-          git push origin main
+          git commit -m "Auto-update scraped data [skip ci]" || echo "No changes"
+          git push origin main || echo "No push needed"
+
+      - name: Upload artifacts for Pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: .
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: scrape
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
