--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,18 +1,20 @@
-name: Run Market Watcher Scraper + Deploy to GitHub Pages
+name: Scrape Market Data (Every 6 Hours)
 
 on:
   schedule:
-    - cron: "0 */6 * * *" # every 6 hours
-  workflow_dispatch:       # allows manual trigger
+    - cron: "0 */6 * * *"   # runs at 00:00, 06:00, 12:00, 18:00 UTC
+  workflow_dispatch:         # allow manual runs from Actions tab
+
+permissions:
+  contents: write            # required to push changes
+
+concurrency:
+  group: scrape-market-data
+  cancel-in-progress: false
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write  # allow pushing changes
-      pages: write
-      id-token: write
 
     steps:
       - name: Checkout repository
@@ -32,31 +34,11 @@ jobs:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: npm run scrape
 
-      - name: Commit scraped data
+      - name: Commit and push results (if any)
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add products/hot_all.json keywords/keyword_hot.json
-          git commit -m "Auto-update scraped data [skip ci]" || echo "No changes"
-          git push origin main || echo "No push needed"
-
-      - name: Upload artifacts for Pages
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: scrape
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          git add products/ keywords/
+          git diff --cached --quiet && echo "No changes to commit" && exit 0
+          git commit -m "Auto-update scraped data ($(date -u +'%Y-%m-%d %H:%M:%S') UTC)"
+          git push origin main
